[package]
name = "frost-dalek-bind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
rand_core = { version = "0.5", default-features = false, features = ["getrandom"] }
frost-dalek = { git = "https://github.com/XP-NETWORK/frost-dalek", rev = "74a62f726b7266168ab2229b6ca5a87bdf95dbc2" } 
ed25519-dalek = "1"
curve25519-dalek = "3"
napi = "2"
napi-derive = "2"

[build-dependencies]
napi-build = "1"
